--- a/app/heroes.component.html
+++ b/app/heroes.component.html
@@ -1,4 +1,10 @@
 <h2>My Heroes</h2>
+<div>
+    <label>Hero name:</label><input #heroName/>
+    <button (click)="add(heroName.value); heroName.value=''">
+        Add
+    </button>
+</div>
 <ul class="heroes">
     <li *ngFor="let hero of heroes" 
         [class.selected]="hero === selectedHero"
@@ -12,4 +18,5 @@
     </h2>
     <button (click)="gotoDetail()">View Details</button>
 </div>
+
     
